--- a/src/WeatherApp.WebApi/WeatherApp.WebApi.csproj
+++ b/src/WeatherApp.WebApi/WeatherApp.WebApi.csproj
@@ -5,4 +5,8 @@
         <RootNamespace>WeatherApp.WebApi</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    </ItemGroup>
+
 </Project>
