--- a/src/WeatherApp.ServiceLayer/WeatherApp.ServiceLayer.csproj
+++ b/src/WeatherApp.ServiceLayer/WeatherApp.ServiceLayer.csproj
@@ -9,4 +9,9 @@
       <ProjectReference Include="..\WeatherApp.BusinessLayer\WeatherApp.BusinessLayer.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    </ItemGroup>
+
 </Project>
