--- a/src/WeatherApp.WebApi/WeatherApp.WebApi.csproj
+++ b/src/WeatherApp.WebApi/WeatherApp.WebApi.csproj
@@ -9,4 +9,8 @@
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\WeatherApp.BusinessLayer\WeatherApp.BusinessLayer.csproj" />
+    </ItemGroup>
+
 </Project>
