Forecast endpoint returns data for cityName

--- a/src/WeatherApp.WebApi/WeatherApp.WebApi.csproj
+++ b/src/WeatherApp.WebApi/WeatherApp.WebApi.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\WeatherApp.BusinessLayer\WeatherApp.BusinessLayer.csproj" />
+      <ProjectReference Include="..\WeatherApp.ServiceLayer\WeatherApp.ServiceLayer.csproj" />
     </ItemGroup>
 
 </Project>
