--- a/src/WeatherApp.BusinessLayerTests/WeatherApp.BusinessLayerTests.csproj
+++ b/src/WeatherApp.BusinessLayerTests/WeatherApp.BusinessLayerTests.csproj
@@ -17,4 +17,8 @@
       <ProjectReference Include="..\WeatherApp.Testing\WeatherApp.Testing.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Managers" />
+    </ItemGroup>
+
 </Project>
