--- a/src/WeatherApp.Testing/WeatherApp.Testing.csproj
+++ b/src/WeatherApp.Testing/WeatherApp.Testing.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\WeatherApp.BusinessLayer\WeatherApp.BusinessLayer.csproj" />
+      <ProjectReference Include="..\WeatherApp.WebApi\WeatherApp.WebApi.csproj" />
     </ItemGroup>
 
 </Project>
