--- a/src/WeatherApp.WebApi/appsettings.json
+++ b/src/WeatherApp.WebApi/appsettings.json
@@ -7,5 +7,10 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "verylongkeyqwerty",
+    "Issuer": "test.com",
+    "Audience": ""
+  },
   "OpenWeatherApiKey": "fcadd28326c90c3262054e0e6ca599cd"
 }
