Implement token authorization

--- a/src/WeatherApp.WebApi/appsettings.json
+++ b/src/WeatherApp.WebApi/appsettings.json
@@ -10,7 +10,7 @@
   "Jwt": {
     "Key": "verylongkeyqwerty",
     "Issuer": "test.com",
-    "Audience": ""
+    "Audience": "test.com"
   },
   "OpenWeatherApiKey": "fcadd28326c90c3262054e0e6ca599cd"
 }
